--- a/JenkinsFile
+++ b/JenkinsFile
@@ -9,7 +9,7 @@ pipeline{
           stage("build & SonarQube analysis") {
             agent any
             steps {
-              withSonarQubeEnv('Sonar-service') {
+              withSonarQubeEnv('sonar-passport') {
                 sh 'java -version'
                 sh 'mvn clean package sonar:sonar'
               }
