--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,6 +1,6 @@
 pipeline{
-   agent {
-    docker {
+   agent any{
+     tools {
       image 'maven:3.6.3-jdk-11'
       args '-v /root/.m2:/root/.m2'
     }
