--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,10 +1,10 @@
 pipeline{
-   agent any{
+   agent any
      tools {
       image 'maven:3.6.3-jdk-11'
       args '-v /root/.m2:/root/.m2'
     }
-  }
+  
   stages {
           stage("build & SonarQube analysis") {
             agent any
