--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,8 +1,8 @@
 pipeline{
    agent any
      tools {
-      image 'maven:3.6.3-jdk-11'
-      args '-v /root/.m2:/root/.m2'
+      maven 'm2'
+      
     }
   
   stages {
